[project]
name = "kg-with-features"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
]
